# gepett

./: README.md  monitor_gepett.sh  pyproject.toml  requirements.txt  restart_gepett.sh
bot/: bot.js  config.json  package.json  zmq_bridge.js
docker/: Dockerfile  compose.yml
gepett/adapter/: mc_adapter.py  schemas.py
gepett/dsl/: grammar.md  interpreter.py  parser.py
gepett/sandbox/: executor.py  manager.py
scripts/: bench_hbm.sh  run_pipeline_full.sh  run_pipeline_symbolic.sh  run_server.sh  setup_cuda.sh  snapshot_world.sh
server/: server.properties
