[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gepett"
version = "0.1.0"
authors = [
  { name="Gepett Core Team" },
]
description = "A Game-Agnostic Agent System for Minecraft (CUDA Headless)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gepett*"]
exclude = ["tests*", "experiments*"]
namespaces = false
